# cow-to-text

./: .SRCINFO  .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  cowtotext.py  cowtotext_main.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
venv_fresh/: pyvenv.cfg
